Fix centering issue and add preventdefault to knob
Slide3 was not centered, now is with flex.
Knob has issue on mobile where pulling down also reloaded the screen.
Now preventdefault should prevent that.

--- a/src/slide3.css
+++ b/src/slide3.css
@@ -2,6 +2,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
+}
+
+.skills-text {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.skills-text>svg {
+    width: fit-content;
 }
 
 .my-skills {
